refactor: reservation_waiting 도메인 name/reservation_id → member 기반으로 전환